<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/altitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/altitude"
        android:inputType="numberDecimal" />
</LinearLayout>